--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,6 @@
 name: Build Vite Project
 
+# Trigger manually from GitHub Actions UI
 on:
   workflow_dispatch:
 
@@ -8,22 +9,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v3
+      # 1️⃣ Checkout your repo
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
+      # 2️⃣ Setup Node.js (v18)
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      - name: Install Dependencies
+      # 3️⃣ Install dependencies
+      - name: Install dependencies
         run: npm install
 
-      - name: Build Project
+      # 4️⃣ Build production version
+      - name: Build project
         run: npm run build
 
-      - name: Archive dist folder
-        uses: actions/upload-artifact@v3
+      # 5️⃣ Upload dist/ folder as artifact (ready-to-download ZIP)
+      - name: Upload dist as artifact
+        uses: actions/upload-artifact@v4
         with:
           name: gintarr-dist
           path: dist/
